[#7919]  Fix overflow display issue for context menu

--- a/Allura/allura/public/nf/css/navbar.css
+++ b/Allura/allura/public/nf/css/navbar.css
@@ -272,7 +272,6 @@
     background: #f0f0f0;
     border: 1px solid #999;
     box-shadow: -2px 2px 6px #555;
-    overflow: auto;
     position: absolute;
     margin-top: 20px;
     margin-left: 5px;
